--- a/app/views/books/_newform.html.erb
+++ b/app/views/books/_newform.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@book) do |f| %>
+<%= form_for(book) do |f| %>
 
-  <% if @book.errors.any? %>
+  <% if book.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</h2>
+    <h2><%= pluralize(book.errors.count, "error") %> prohibited this product from being saved:</h2>
     <ul>
-      <% @book.errors.full_messages.each do |message| %>
+      <% book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
        <% end %>
   <% end %>
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class="actions row">
-		<%= f.submit class: "btn btn-primary col-xs-12" %>
+		<%= f.submit "Create Book", class: "btn btn-primary col-xs-12" %>
 	</div>
 
 <% end %>
