--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,10 +3,10 @@
 	<div class="col-xs-3">
 
 		<h2>User info</h2>
-		<%= render 'users/profile' %>
+		<%= render 'users/profile',user: @user %>
 
 		<h2>New book</h2>
-		<%= render 'books/newform' %>
+		<%= render 'newform' ,book: Book.new %>
 
 	</div>
 
@@ -23,12 +23,86 @@
 					</td>
 					<td><%= link_to @book.title, @book %></td>
 					<td><%= @book.body %></td>
+
 					<% if @book.user_id == current_user.id %>
 					<td><%= link_to "Edit",edit_book_path(@book) %></td>
 					<td><%= link_to "Destroy",book_path, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
 					<% end %>
+				   <td>
+					<div class="fa fa-comment">
+					<a href="#comments"><%= @book.book_comments.count %></a>
+						<div class="comment-list bt style-2" id="comments">
+
+					</td>
+		</table>
+		<table class="table">
+					<tr>
+					    <% @book.book_comments.each do |book_comment| %>
+
+					    <td>
+						<%= link_to (@book.user) do %>
+						<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
+						<%= @user.name %>
+						<% end %>
+					</td>
+
+					                <div class="comment-text">
+					                    <div class="comment-author clearfix">
+					                       <%= book_comment.user.name %></a>
+					                        <span class="comment-meta">
+					                        <span class="comment-date"><%= book_comment.created_at.strftime('%Y/%m/%d') %></span>
+					                        </span>
+					                    </div>
+					                    <div class="comment-entry"><%= book_comment.comment %></div>
+					                </div>
+					            </div>
+
+
+			             <% if book_comment.user == current_user %>
+			          <td>
+					  <div>
+					    <%= link_to "削除", book_book_comment_path(book_comment. book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+					  </div>
+					</td>
+					<% end %>
+					 </tr>
+		</table>
+		<table class="table">
+					<% if @book.favorited_by?(current_user) %>
+					<li>
+					    <%= link_to book_favorites_path(@book), method: :delete do %>
+					    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+					    <%= @book.favorites.count %> いいね
+					    <% end %>
+					</li>
+					<% else %>
+					<li>
+					    <%= link_to book_favorites_path(@book), method: :post do %>
+					    <i class="fa fa-heart-o" aria-hidden="true"></i>
+					    <%= @book.favorites.count %> いいね
+					    <% end %>
+					</li>
+					<% end %>
+					    <% end %>
+	    </table>
+
+					<%= form_for [@book, @book_comment] do |f| %>
+					    <div class="row">
+					        <div class="col-sm-12">
+					            <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+					        </div>
+					    </div>
+					    <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+
+					<% end %>
+					    <% if @book_comment.user == current_user %>
+					  <div>
+					    <%= link_to "削除", book_comment_path(book_comment. book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+					  </div>
+					<% end %>
+
+
 				</tr>
-			</table>
 
 	</div>
 </div>
