--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,23 +37,20 @@
 				
                    </td>
 				<% if book.favorited_by?(current_user) %>
-					<td>
-					    <%= link_to book_favorites_path(book), method: :delete do %>
-					    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-					    <%= book.favorites.count %> いいね
+				<td>
+					    <%= link_to book_favorites_path(book, redirect_id: 0), method: :delete do %>
+					    <span class="glyphicon glyphicon-heart"><%= book.favorites.count%></span>
 					    <% end %>
-					</td>>
+				</td>>
 					<% else %>
-					<td>
-					    <%= link_to book_favorites_path(book), method: :post do %>
-					    <i class="fa fa-heart-o" aria-hidden="true"></i>
-					    <%= book.favorites.count %> いいね
+				<td>
+					  <%= link_to book_favorites_path(book, redirect_id: 0), method: :post do %>
+					 <span class="glyphicon glyphicon-heart-empty"><%= book.favorites.count %></span>
 					    <% end %>
-					</td>>
 					<% end %>
-
-
-				</tr>
+				</td>
+        <td>コメント数：<%= book.book_comments.count %></td>
+		</tr>
 
 				<% end %>
 			</tbody>
