--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,86 +24,58 @@
 					<td><%= link_to @book.title, @book %></td>
 					<td><%= @book.body %></td>
 
+
+					<td>
+          <% if @book.favorited_by?(current_user) %>
+            <%= link_to book_favorites_path(@book, redirect_id: 0), method: :delete do %>
+              <span class="glyphicon glyphicon-heart"><%= @book.favorites.count%></span>
+            <% end %>
+          <% else %>
+            <%= link_to book_favorites_path(@book, redirect_id: 0), method: :post do %>
+              <span class="glyphicon glyphicon-heart-empty"><%= @book.favorites.count %></span>
+            <% end %>
+          <% end %>
+        </td>
+
+
+         <td>コメント数：<%= @book.book_comments.count %></td>
+
 					<% if @book.user_id == current_user.id %>
 					<td><%= link_to "Edit",edit_book_path(@book) %></td>
-					<td><%= link_to "Destroy",book_path, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %></td>
-					<% end %>
-				   <td>
-					<div class="fa fa-comment">
-					<a href="#comments"><%= @book.book_comments.count %></a>
-						<div class="comment-list bt style-2" id="comments">
-
+					<td><%= link_to "Destroy",book_path, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"} %>
 					</td>
-		</table>
-		<table class="table">
-					<tr>
+					<% end %>
+		</tr>
+</table>
+	<table class="table">
+		
 					    <% @book.book_comments.each do |book_comment| %>
-
+					<tr>
 					    <td>
-						<%= link_to (@book.user) do %>
-						<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
-						<%= @user.name %>
+							<%= link_to (@book.user) do %>
+							<%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
+							<%= @user.name %>
 						<% end %>
-					</td>
+					    </td>
 
-					                <div class="comment-text">
-					                    <div class="comment-author clearfix">
-					                       <%= book_comment.user.name %></a>
-					                        <span class="comment-meta">
-					                        <span class="comment-date"><%= book_comment.created_at.strftime('%Y/%m/%d') %></span>
-					                        </span>
-					                    </div>
-					                    <div class="comment-entry"><%= book_comment.comment %></div>
-					                </div>
-					            </div>
+			            <td>
+							<%= book_comment.comment %>
+						</td>
+						<% unless current_user != book_comment.user %>
 
-
-			             <% if book_comment.user == current_user %>
-			          <td>
-					  <div>
-					    <%= link_to "削除", book_book_comment_path(book_comment. book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
-					  </div>
-					</td>
-					<% end %>
-					 </tr>
-		</table>
-		<table class="table">
-					<% if @book.favorited_by?(current_user) %>
-					<li>
-					    <%= link_to book_favorites_path(@book), method: :delete do %>
-					    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-					    <%= @book.favorites.count %> いいね
-					    <% end %>
-					</li>
-					<% else %>
-					<li>
-					    <%= link_to book_favorites_path(@book), method: :post do %>
-					    <i class="fa fa-heart-o" aria-hidden="true"></i>
-					    <%= @book.favorites.count %> いいね
-					    <% end %>
-					</li>
-					<% end %>
-					    <% end %>
-	    </table>
-
-					<%= form_for [@book, @book_comment] do |f| %>
-					    <div class="row">
-					        <div class="col-sm-12">
-					            <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-					        </div>
-					    </div>
-					    <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
-
-					<% end %>
-					    <% if @book_comment.user == current_user %>
-					  <div>
-					    <%= link_to "削除", book_comment_path(book_comment. book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
-					  </div>
-					<% end %>
-
-
-				</tr>
-
+			          	<td>
+	   						 <%= link_to "削除", book_book_comment_path(book_comment. book, book_comment), method: :delete, class: "btn btn-danger pull-right" %>
+						</td>
+						<% end %>
+		</tr>
+		<% end %>
+	</table>
+		    <div class="comment-form">
+      <%= form_for [@book, @book_comment] do |f| %>
+        <%= f.text_area :comment, size: "90x5" %>
+        <%= f.submit '送信' %>
+      <% end %>
+    </div>
 	</div>
 </div>
 
