--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,6 +28,10 @@
 		<tr>
 			<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
 			<td><%= user.name%></td>
+
+			
+		<%#= render ‘relationships/follow_button’, user: @user %>
+
 			<td><%= link_to "Show", user, class: "user_#{user.id}" %></td>
 		</tr>
 		<% end %>
