--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
 <%= render 'users/profile', user: @user %>
 <!--同コントローラーのviewで表示ならusersは省略可 -->
 
+<%= link_to 'relationships/follow_button', user: @user %>
+
 <h2>New book</h2>
 <%= render 'books/newform', book: @book %>
 
